Set, reset and use indices

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -57,9 +57,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>qid</th>\n",
+       "      <th>qname</th>\n",
+       "      <th>question</th>\n",
+       "      <th>force_resp</th>\n",
+       "      <th>type</th>\n",
+       "      <th>selector</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>QID289</td>\n",
+       "      <td>Knowledge_4</td>\n",
+       "      <td>I am able to quickly find answers to my questi...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MC</td>\n",
+       "      <td>MAVR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>QID289</td>\n",
+       "      <td>Knowledge_5</td>\n",
+       "      <td>I know which system or resource to use to find...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MC</td>\n",
+       "      <td>MAVR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>QID289</td>\n",
+       "      <td>Knowledge_6</td>\n",
+       "      <td>I often find myself answering questions that I...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MC</td>\n",
+       "      <td>MAVR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>QID289</td>\n",
+       "      <td>Knowledge_7</td>\n",
+       "      <td>Waiting on answers to questions often causes i...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MC</td>\n",
+       "      <td>MAVR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>QID290</td>\n",
+       "      <td>Frequency_1</td>\n",
+       "      <td>Needing help from people outside of your immed...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MC</td>\n",
+       "      <td>MAVR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>QID290</td>\n",
+       "      <td>Frequency_2</td>\n",
+       "      <td>Interacting with people outside of your immedi...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MC</td>\n",
+       "      <td>MAVR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>QID290</td>\n",
+       "      <td>Frequency_3</td>\n",
+       "      <td>Encountering knowledge silos (where one indivi...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MC</td>\n",
+       "      <td>MAVR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>QID294</td>\n",
+       "      <td>TrueFalse_1</td>\n",
+       "      <td>Are you involved in supporting new hires durin...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MC</td>\n",
+       "      <td>MAVR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>QID294</td>\n",
+       "      <td>TrueFalse_2</td>\n",
+       "      <td>Do you use learning resources provided by your...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MC</td>\n",
+       "      <td>MAVR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>QID294</td>\n",
+       "      <td>TrueFalse_3</td>\n",
+       "      <td>Does your employer give you time to learn new ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MC</td>\n",
+       "      <td>MAVR</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       qid        qname                                           question  \\\n",
+       "69  QID289  Knowledge_4  I am able to quickly find answers to my questi...   \n",
+       "70  QID289  Knowledge_5  I know which system or resource to use to find...   \n",
+       "71  QID289  Knowledge_6  I often find myself answering questions that I...   \n",
+       "72  QID289  Knowledge_7  Waiting on answers to questions often causes i...   \n",
+       "73  QID290  Frequency_1  Needing help from people outside of your immed...   \n",
+       "74  QID290  Frequency_2  Interacting with people outside of your immedi...   \n",
+       "75  QID290  Frequency_3  Encountering knowledge silos (where one indivi...   \n",
+       "76  QID294  TrueFalse_1  Are you involved in supporting new hires durin...   \n",
+       "77  QID294  TrueFalse_2  Do you use learning resources provided by your...   \n",
+       "78  QID294  TrueFalse_3  Does your employer give you time to learn new ...   \n",
+       "\n",
+       "   force_resp type selector  \n",
+       "69        NaN   MC     MAVR  \n",
+       "70        NaN   MC     MAVR  \n",
+       "71        NaN   MC     MAVR  \n",
+       "72        NaN   MC     MAVR  \n",
+       "73        NaN   MC     MAVR  \n",
+       "74        NaN   MC     MAVR  \n",
+       "75        NaN   MC     MAVR  \n",
+       "76        NaN   MC     MAVR  \n",
+       "77        NaN   MC     MAVR  \n",
+       "78        NaN   MC     MAVR  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.tail(10)"
    ]
